# cli

./: .pilot-commands.yaml  .pilot-hints.md  .pilot-skills.yaml  .pre-commit-config.yaml  COMMANDS.md  CONFIGURATION.md  German.md  Makefile  README.md  README_German.md  TROUBLESHOOTING.md  cli.py  clitest.py  doc_instructions.md  haiku.txt  haiku_Makefile.md  haiku_README.md  haiku_flake8.md  haiku_license.md  haiku_makefile.md  haiku_pre_commit.md  haiku_pyproject.md  haiku_readme.md  homebrew_formula.rb  issues.json  pilot-behaviors.yaml  pilot-skills.yaml  poem.txt  poem_LICENSE.md  poem_Makefile.md  poem_README.md  poem_en.txt  poem_es.txt  poem_flake8.md  poem_gitignore.md  poem_makefile.md  poem_pre_commit.md  poem_pre_commit_config.md  poem_pyproject.md  pyproject.toml  (+6 more)
.github/workflows/: import_smart_workflow.yaml  initialize_project.yaml  publish.yaml  unit_tests.yml
cli/: batch_runner.py  cli.py  command_index.py  constants.py  detect_repository.py  models.py  plan_executor.py  prompt_template.py  quicksort.py  skill_index.py  status_indicator.py  task_handler.py  task_runner.py  templating.py  test_cli.py  test_quicksort.py  test_task_runner.py  user_config.py  util.py
cli/commands/: auth.py  chat.py  config.py  edit.py  grab.py  history.py  plan.py  pr.py  run.py  task.py  test.py  upgrade.py
examples/: bootstrap_component.html
examples/extract-project-template/: Makefile  extract_template.md.jinja2  format_instructions.md.jinja2  new_project_from_template.md.jinja2  template.md  understand_build_system.md.jinja2  understand_project_structure.md.jinja2  understand_readme.md.jinja2
examples/implementation-plan/: README.md  quicksort.yaml
examples/recursion/: plan.yaml  write_spec.md.jinja2
path/to/your/: file.py
prompts/: README.md  README.md.jinja2  analyze_test_results.md.jinja2  calculate_pi.md.jinja2  fix-tests.md.jinja2  generate_pr_description.md.jinja2  homebrew.md.jinja2  house-keeping.md.jinja2  investigate-pod.jinja2  make_improvements.jinja2  make_improvements.yaml.jinja2  slack-report.md.jinja2  test.yaml
tests/: __init__.py  conftest.py  test_cli.py  test_command_grabbing.py  test_command_index.py  test_prompt_template.py  test_task_handler.py  test_util.py
(+6 files in other folders)
