[tool.poetry]
name = "pr-pilot-cli"
version = "1.8.9"
description = "CLI for PR Pilot, a text-to-task automation platform for Github."
authors = ["Marco Lamina <marco@pr-pilot.ai>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "8.1.7"
pr-pilot = "1.5.3"
pyyaml = "6.0.1"
yaspin = "3.0.2"
rich = "13.7.1"
jinja2 = "3.1.4"
pydantic = "2.7.0"

[tool.poetry.scripts]
pilot = "cli.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"