[tool.poetry]
name = "pr-pilot-cli"
version = "1.11.14"
description = "CLI for PR Pilot, a text-to-task automation platform for Github."
authors = ["Marco Lamina <marco@pr-pilot.ai>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "cli"}]
documentation = "https://docs.pr-pilot.ai"
homepage = "https://www.pr-pilot.ai"
repository = "https://github.com/pr-pilot-ai/pr-pilot-cli"

[tool.black]
line-length = 100

[tool.poetry.dependencies]
python = "~3.10.0"
click = "8.1.7"
pr-pilot = "1.6.1"
pyyaml = "6.0.1"
yaspin = "3.0.2"
rich = "13.7.1"
jinja2 = "3.1.4"
humanize = "^4.9.0"
inquirer = "^3.2.5"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
flake8 = "^7.1.0"
pre-commit = "^3.7.1"

[tool.poetry.scripts]
pilot = "cli.cli:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"